<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.CartActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Košarica"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/white"
            android:background="@color/main"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlTop"
        app:layout_constraintBottom_toTopOf="@+id/llBottom"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ukupan iznos:"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textColor="@color/main" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="200"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="15dp"
                android:textColor="@color/main"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Kupi sada"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>