...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:src="@drawable/baseline_shopping_cart_24"
            app:tint="@color/white"
            android:layout_alignParentEnd="true"/>
...
            android:background="@color/main"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rlTop"
        app:layout_constraintBottom_toBottomOf="parent"/>
...
