...
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="15dp"/>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="Dodaj u košaricu"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"
...
