<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Molimo unesite vaše informacije: "
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/main"
                android:layout_centerInParent="true"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/main"
                app:boxStrokeColor="@color/main"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/baseline_person_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Ime"
                    android:inputType="text"
                    android:textColor="@color/main"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                style="@style/inputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/main"
                app:boxStrokeColor="@color/main"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/baseline_email_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/main"
                    android:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/main"
                app:boxStrokeColor="@color/main"
                app:hintTextColor="@color/main"
                app:startIconDrawable="@drawable/baseline_phone_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Telefon"
                    android:inputType="phone"
                    android:textColor="@color/main" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/inputOuterFieldStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/main"
                app:boxStrokeColor="@color/main"
                app:startIconDrawable="@drawable/baseline_location_on_24"
                app:startIconTint="@color/main">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDeliveryAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Adresa"
                    android:inputType="textMultiLine"
                    android:textColor="@color/main" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/llRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btnLogin"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="Otkaži"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:backgroundTint="#F44336"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="Potvrdi"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"/>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.cardview.widget.CardView>